k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mission-control-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mission-control.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mission-control
                port:
                  number: 80
